syntax = "proto3";
package bkt;

option java_multiple_files = true;
option java_package = "org.vstu.compprehension.bkt.grpc";
option java_outer_classname = "BktProto";

message UpdateRosterRequest {
  string roster = 1;
  string student = 2;
  bool correct = 3;
  repeated string skills = 4;
}

message UpdateRosterResponse {
  string roster = 1;
}

service BktService {
  rpc UpdateRoster (UpdateRosterRequest) returns (UpdateRosterResponse);
}
